# andyparfei

./: .gitignore  NOTICE  README.md  dark_mode.apng  dark_portrait.apng  embed_portrait.py  generate.py  light_mode.apng  light_portrait.apng  package-lock.json  package.json  portrait_text.html  pyproject.toml  stats_text.html  today.py
.github/workflows/: build.yaml
src/profilegen/: __init__.py  cache.py  config.py  formatting.py  github_api.py  svg.py
